# idiorag

./: .env.example  .env.template  .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  pyproject.toml  quickstart.py  requirements.txt  run.py  test_setup.py
docs/internal/: CUSTOM_CHUNKING.md  DATA_TRANSFORMATION.md  DEVELOPMENT.md  FISHING_LOGS.md  IMPLEMENTATION.md  PGVECTOR_SETUP.md  POSTGRES_WSL_SETUP.md  QUICK_REFERENCE.md  README.md  UV_GUIDE.md  UV_MIGRATION.md  VERIFICATION.md  bodies_of_water.json  fish_types.json  lure_types.json  sample_atb_logs_with_events.json  structure_types.json  weather_data_log_191812.json
examples/: quickstart.py
examples/fishing/: INPUT_FORMAT.md  README.md  USAGE.md  fishing_chunker.py  sample_enriched_log.json  test_chunker.py
src/idiorag/: __init__.py  auth.py  config.py  database.py  logging_config.py  main.py  utils.py
src/idiorag/api/: __init__.py
src/idiorag/api/endpoints/: documents.py  query.py
src/idiorag/rag/: __init__.py
src/idiorag/rag/chunkers/: __init__.py  base.py  default.py
tests/: inspect_jwt.py  test_setup.py  test_streaming.py
